# TrenchantTracer

./: .gitignore  CMakeLists.txt  README.md
config/: cornell_car.json  cornell_dragon.json  dev.json  maserati.json
include/: Config.h
include/bvh/: AABB.h  BVH.h  BVHCompact.h  BVHHolder.h  BVHNode.h  InnerNode.h  LeafNode.h  SAHHelper.h
include/control/: Controller.h  Keyboard.h  Mouse.h
include/core/: Camera.h  Group.h  HDRImage.h  Object.h  Renderer.h  Scene.h
include/geometry/: Geometry.h  GeometryCompact.h  GeometryUnion.h  Hit.h  IntersectKernel.cuh  Mesh.h  Plane.h  PlaneImpl.cuh  Ray.h  Sphere.h  SphereImpl.cuh  Transform.h  Vertices.h
include/hdr/: HDRImage.h  HDRKernel.cuh
include/loader/: HDRLoader.h  MaterialLoader.h  OBJLoader.h  SceneLoader.h
include/material/: Coat.h  CoatImpl.cuh  CoatMaterial.h  Diff.h  DiffImpl.cuh  Material.h  MaterialCompact.h  MaterialPool.h  MaterialUnion.h  Metal.h  MetalImpl.cuh  Refr.h  RefrImpl.cuh  Spec.h  SpecImpl.cuh
include/math/: CutilMath.h  LinearMath.h  PoseMath.h
include/util/: Array.h  Config.h  Sort.h  WangHash.h
src/: main.cpp
src/bvh/: AABB.cpp  BVH.cpp  BVHCompact.cpp  BVHHolder.cpp  BVHNode.cpp  InnerNode.cpp  LeafNode.cpp  SAHHelper.cpp
src/control/: Controller.cpp  Keyboard.cpp  Mouse.cpp
src/core/: Camera.cpp  Group.cpp  HDRImage.cpp  HDRKernel.cu  Object.cpp  RenderKernel.cu  Renderer.cpp  Scene.cpp
src/geometry/: Geometry.cpp  GeometryCompact.cpp  Hit.cu  IntersectKernel.cu  Mesh.cpp  Plane.cu  Ray.cu  Sphere.cpp  Sphere.cu  Transform.cpp  Vertices.cpp
src/hdr/: HDRImage.cpp  HDRKernel.cu
src/loader/: HDRLoader.cpp  MaterialLoader.cpp  OBJLoader.cpp  SceneLoader.cpp
src/material/: Coat.cpp  Coat.cu  Diff.cpp  Diff.cu  Material.cpp  Material.cu  MaterialCompact.cpp  MaterialPool.cpp  Metal.cpp  Metal.cu  Refr.cpp  Refr.cu  Spec.cpp  Spec.cu
src/util/: Config.cpp  Sort.cpp  WangHash.cpp
